<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/fragmentLogin_linearLayout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#fff"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_ifmo_blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:id="@+id/editTextLogin"
            style="@style/EditTextStyle"
            android:hint="@string/login"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/EditTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            style="@style/DividerDefault"/>

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listview_item_states"
            android:padding="30dp"
            android:text="@string/signin"
            android:textColor="@color/main_blue"
            android:textSize="@dimen/main_textsize"
            android:textStyle="bold"
            android:typeface="normal"/>
    </LinearLayout>

</LinearLayout>